--- a/ecommerce/src/main/resources/application.properties
+++ b/ecommerce/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=ecommerce
+spring.datasource.url=jdbc:mysql://localhost:3306/store
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
